# deeplearning_cpp_libraries

./: CMakeLists.txt  README.md  example_slp.h  main  main.cpp
src/: readMe.md
src/Function/: Function.h
src/Variable/: Variable.cpp  Variable.h
src/common/: book.h
src/cudaMat/: cudaMat.h  cudaMatSparse.h  readMe.md
src/cudaMat/support/: mat_mul_elementwise_kernel.cu  mat_mul_elementwise_kernel_exec.h
src/cudaMat/support/MatMulElementwise/: mat_mul_elementwise_kernel.cu  mat_mul_elementwise_kernel.h
src/cudaMat/support/MatOnes/: mat_ones_kernel.cu  mat_ones_kernel.h
src/cuda_repo/: readme.md
src/cuda_repo/repo5/: 5_thread_1.cu  example_thread_inner_product.cu  example_thread_julia.cu  example_thread_sum.cu  example_thread_wave.cu  readme.md
src/cuda_repo/repo6/: example_constmem_ray_sphere.cu  example_constmem_ray_sphere_const.cu  example_constmem_ray_sphere_nonconst.cu  example_constmem_ray_sphere_performance.cu  example_constmem_ray_sphere_performance_const.cu  readme.md
src/cuda_repo/repo7/: readme.md
src/jn_uart/: jn_uart.py
src/slp/: single_perceptron.cpp  single_perceptron.h
